--- a/Job Application/styles.css
+++ b/Job Application/styles.css
@@ -1,14 +1,12 @@
-html{
-	margin: 20px;
-	padding: 20px;	
-}
+* {
+    box-sizing: border-box;
+
+} 
 
 body{
+	box-shadow: 5px;
 	font-family:'Source Sans Pro', sans-serif;
-	background-color: #ccffff;
-	border-width: 2px;
-	border-style: dashed;
-	border-color: black midnightblue;
+	background-color: #cccfff;
 	padding: 30px;
 	padding-top: 0;
 	border-radius: 20px;
@@ -17,6 +15,7 @@ body{
 h1{
 	text-align: center;
 	color: midnightblue;
+	font-size: xx-large;
 }
 
 form{
@@ -29,27 +28,34 @@ label{
 	color: midnightblue;
 }
 
-input,datalist,select {
-  border-radius:5px;
-  margin-left: 10px;
-  padding:2px;
-  border-width: 2px;
-  border-color: grey;
+input[type=text],input[type=date],input[type=email],select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display:inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-input[type='checkbox']{
-	margin-left: 0px;
+.form{
+		padding: 35px;
+    background-color: white;
+    margin: auto;
+    border-radius: 10px ;
+    box-shadow: 10px;
 }
 
-input[type='file']{
-	border-radius: 8px;
+input[type=submit]{
+    background-color: #ccccff;
+    width:100%;
+    border-radius: 5px;
+    padding:12px;
+   	border: none;
+    color :white;
+    font-size: large;  
+    
 }
-
-.btn{
-	border-radius: 5px;
-	padding: 5px 8px;
-	color: midnightblue;
-	margin-left: 0px;
-	font-size: 14px;
+input[type=submit]:hover{
+    background-color: lightgrey ;
 }
-
